Add jest template files and configs.. Hurray it's working with two different environments

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "yosay": "^2.0.1"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": ["/node_modules/", "/app/templates/"]
   },
   "scripts": {
     "prepublish": "nsp check",
